--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1"
   }
 }
